--- a/src/main/resources/com/example/communicationcontrollers/protoboard.fxml
+++ b/src/main/resources/com/example/communicationcontrollers/protoboard.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.communicationcontrollers.SceneController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="105.0" layoutX="200.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
       <Label layoutX="272.0" layoutY="87.0" text="Protoboard" />
+      <Button layoutX="277.0" layoutY="333.0" mnemonicParsing="false" onAction="#goToMainTab" text="Button" />
    </children>
 </AnchorPane>
